2008-06-15  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PlaceMarkManager.cpp

    use the new KML implementation; later we can remove the
    XMLHandler stuff

2008-06-15 Shashank Singh <shashank.personal@gmail.com>
    * src/lib/jsonparser.h
    * src/lib/jsonparser.cpp

2008-06-14 Shashank Singh <shashank.personal@gmail.com>
    * src/lib/jsonparser.h
    * src/lib/jsonparser.cpp
    * src/lib/TinyWebBrowser.h
    * src/lib/TinyWebBrowser.h

2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/tests/CMakeLists.txt

    fix linkage of QTONLY version
  
   
2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PluginManager.cpp

    make the output of the pluginmanager usable

2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt
    * MarbleMacros.cmake
    * src/plugins/designer/marblewidget/CMakeLists.txt
    * src/plugins/designer/navigator/CMakeLists.txt
    * src/plugins/marble/compass/CMakeLists.txt
    * src/plugins/marble/overviewmap/CMakeLists.txt
    * src/plugins/marble/satellites/CMakeLists.txt
    * src/plugins/marble/stars/CMakeLists.txt
    * src/plugins/marble/test/CMakeLists.txt

    add new cmake macros to make the building of marble plugins easier

2008-06-10  Shashank Singh <shashank.personal@gmail.com>
    * CMakeLists.txt
    * src/lib/CmakeLists.txt
    * added src/lib/jsonparser.h
    * added src/lib/jsonparser.cpp
    * changed PLaceMarkinfoDialog.cpp
    * changed TinyWebBrowser.cpp
    * changed TinyWebBrowser.h
    * added a tab named Panoramio in Ui PLaceMarkinfoDialog

2008-06-10  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/CMakeLists.txt:

    Missing export was fixed by mlaurent, so revert the last change.

2008-06-10  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/CMakeLists.txt:

    Disable making of src/lib/tests because of link failure on linux.

2008-06-09  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt
    * src/lib/CMakeLists.txt